fixed spacing between case challenge and solution

--- a/assets/css/components/_content.scss
+++ b/assets/css/components/_content.scss
@@ -79,7 +79,7 @@
   .content-inner {
     margin-bottom: 0;
     & + .content-inner {
-      margin-top: $sp80;
+      margin-top: $sp40;
     }
   }
   .content-subgrid-thirds {
